--- a/config/sync/views.view.job_view.yml
+++ b/config/sync/views.view.job_view.yml
@@ -1,17 +1,17 @@
-uuid: 3846d775-51fb-435e-a721-cac852640c4b
+uuid: 6c50da2b-93c1-4f00-9c57-d19a0bb1e5a7
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_image_from_next_page
-    - field.storage.node.field_link_to_next_page
+    - field.storage.node.field_job_location
+    - field.storage.node.field_link_to_job
   module:
-    - image
     - link
     - node
+    - text
     - user
-id: case_studies
-label: 'Case Studies'
+id: job_view
+label: 'job view'
 module: views
 description: ''
 tag: ''
@@ -51,27 +51,82 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: none
+        type: some
         options:
-          offset: null
+          items_per_page: 5
+          offset: 0
       style:
         type: default
-        options:
-          grouping: {  }
-          row_class: second-custom
-          default_row_class: true
       row:
         type: fields
-        options:
-          default_field_elements: true
-          inline: {  }
-          separator: ''
-          hide_empty: true
       fields:
-        field_image_from_next_page:
-          id: field_image_from_next_page
-          table: node__field_image_from_next_page
-          field: field_image_from_next_page
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          settings:
+            link_to_entity: true
+          plugin_id: field
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        field_job_location:
+          id: field_job_location
+          table: node__field_job_location
+          field: field_job_location
           relationship: none
           group_type: group
           admin_label: ''
@@ -116,12 +171,10 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: image
-          settings:
-            image_style: ''
-            image_link: ''
-          group_column: ''
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -132,10 +185,10 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_link_to_next_page:
-          id: field_link_to_next_page
-          table: node__field_link_to_next_page
-          field: field_link_to_next_page
+        field_link_to_job:
+          id: field_link_to_job
+          table: node__field_link_to_job
+          field: field_link_to_job
           relationship: none
           group_type: group
           admin_label: ''
@@ -201,60 +254,33 @@ display:
           plugin_id: field
       filters:
         status:
-          id: status
+          value: '1'
           table: node_field_data
           field: status
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
           plugin_id: boolean
           entity_type: node
           entity_field: status
+          id: status
+          expose:
+            operator: ''
+          group: 1
       sorts:
         created:
           id: created
           table: node_field_data
           field: created
-          relationship: none
-          group_type: group
-          admin_label: ''
           order: DESC
-          exposed: false
-          expose:
-            label: 'Authored on'
-          granularity: minute
           entity_type: node
           entity_field: created
           plugin_id: date
-      title: 'Case Studies'
+          relationship: none
+          group_type: group
+          admin_label: ''
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+      title: 'job view'
       header: {  }
       footer: {  }
       empty: {  }
@@ -269,16 +295,15 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.field_image_from_next_page'
-        - 'config:field.storage.node.field_link_to_next_page'
+        - 'config:field.storage.node.field_job_location'
+        - 'config:field.storage.node.field_link_to_job'
   block_1:
     display_plugin: block
     id: block_1
-    display_title: 'case studies'
+    display_title: Block
     position: 1
     display_options:
       display_extenders: {  }
-      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
@@ -287,5 +312,5 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.field_image_from_next_page'
-        - 'config:field.storage.node.field_link_to_next_page'
+        - 'config:field.storage.node.field_job_location'
+        - 'config:field.storage.node.field_link_to_job'
